--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,6 @@
 <template name="index">
   <div class="input-group" style="margin:1em 1em 0 1em;">
-    <input type="text" class="form-control" style="padding:1em; font-size: 120%; color:black; padding:0em 1em 0em 1em; height:2em; border: 1px solid #aaa; border-radius: 0;" placeholder="Search content" id="search"/>
+    <input type="text" class="form-control" style="padding:1em; font-size: 120%; color:black; padding:0em 1em 0em 1em; height:2em; border: 1px solid #aaa; border-radius: 0;" placeholder="Materials search" id="search"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-search" style="cursor:pointer;"></span>
     </span> 
